# Optimo

./: ARCHITECTURE.md  Cargo.toml  DOCKER.md  Dockerfile  MANIFESTO.md  README.md  README.md.save
data/: observations.jsonl
data/ocrys/latest/: ocr_original.txt
docs/: DECISIONS.md  LOGBOOK.md  TEST_STRATEGY.md  TRIAD_FORMALISM.md
fixtures/domain/currency_variants/: expected.json  notes.md  raw_ocr_high_contrast.txt  raw_ocr_original.txt  raw_ocr_rotated.txt
fixtures/domain/invoice_table_sample/: expected.json  notes.md  raw_ocr_high_contrast.txt  raw_ocr_original.txt  raw_ocr_rotated.txt
fixtures/domain/ocr_hallucination/: expected.json  notes.md  raw_ocr_original.txt  raw_ocr_rotated.txt
fixtures/real/title_block_001/: expected.json  notes.md
scripts/: process_all.sh  process_all_local.sh  setup_data.sh
src/: aggregate_state.rs  app_state.rs  config.rs  event.rs  fold.rs  fold_adversarial.rs  fold_ocr_stability.rs  fold_properties.rs  fold_semantic_drift.rs  lib.rs  main.rs  observation.rs  operational_policy.rs  persistence.rs  pipeline.rs  profile.rs  reducer.rs  reducer_state.rs  replay.rs  roi_analysis.rs  snapshot.rs  state.rs  state_bridge.rs  task.rs  timequake.rs
src/agastya/: core.rs
src/ocrys/: mod.rs  normalize.rs  preprocess.rs  tesseract.rs  types.rs
src/routes/: README.md  health.rs  mod.rs
tests/integration/: fold_properties.rs
