[package]
name = "optimo"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rayon = "1"
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }

strsim = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
rusqlite = { version = "0.32", features = ["bundled"] }
unicode-normalization = "0.1"
serde_yaml = "0.9"
